fix: to home page white space and layout

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -119,7 +119,7 @@
   justify-content: center;
   flex-direction: column;
   margin-top: 0;
-  width: 100%;
+  padding: 0 !important;
 }
 
 .lisgo-heading {
@@ -203,6 +203,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     height: 100%;
+    margin-right: 4rem;
   }
   .lisgo-heading {
     font-size: clamp(2rem, 2.15vw + 0.5rem, 5rem) !important;
